--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">AndroidAPS</string>
+    <string name="closedloop">Closed Loop</string>
+    <string name="openloop">Отворен режим (Open Loop)</string>
+    <string name="alert">Аларма</string>
     <string name="apsmode_title">APS режим</string>
     <string name="avgdelta">Ср. изменение</string>
     <string name="basal">Базал</string>
@@ -9,7 +12,7 @@
     <string name="bolusconstraintapplied">Приложено ограничение на болус</string>
     <string name="cancel">Откажи</string>
     <string name="carbs">Въглехидрати</string>
-    <string name="carbsconstraintapplied">Приложено ограничени въгл.</string>
+    <string name="carbsconstraintapplied">Приложено ограничениe за въгл.</string>
     <string name="careportal">Careportal</string>
     <string name="careportal_announcement">Известие</string>
     <string name="careportal_bgcheck">КЗ проверка</string>
@@ -19,7 +22,7 @@
     <string name="careportal_combobolus">Комбиниран болус</string>
     <string name="careportal_correctionbolus">Болус за корекция</string>
     <string name="careportal_exercise">Физ. активност</string>
-    <string name="careportal_insulincartridgechange">Замяна сет</string>
+    <string name="careportal_insulincartridgechange">Замяна резервоар</string>
     <string name="careportal_mealbolus">Болус за осн. хранене</string>
     <string name="careportal_newnstreatment_absolute_label">Абсолютна</string>
     <string name="careportal_newnstreatment_carbs_label">Въглехидрати</string>
@@ -44,7 +47,7 @@
     <string name="careportal_snackbolus">Болус за закуска</string>
     <string name="careportal_tempbasalend">Край на временен базал</string>
     <string name="careportal_tempbasalstart">Начало на временен базал</string>
-    <string name="changeyourinput">Променете данните</string>
+    <string name="changeyourinput">Променете данните!</string>
     <string name="configbuilder">Конфигурация</string>
     <string name="configbuilder_aps">APS</string>
     <string name="configbuilder_bgsource">Източник на КЗ</string>
@@ -58,22 +61,161 @@
     <string name="confirmation">Потвърждение</string>
     <string name="constraintapllied">Приложено ограничение!</string>
     <string name="constraints_violation">Нарушено ограничение</string>
-    <string name="cs_lang">Czech</string>
+    <string name="cs_lang">Чешки</string>
     <string name="days">дни</string>
     <string name="delta">Изменение:</string>
     <string name="duration">Продължителност</string>
-    <string name="en_lang">English</string>
+    <string name="en_lang">Английски</string>
     <string name="entertreatmentquestion">Ново действие</string>
     <string name="glucose">КЗ:</string>
+    <string name="limits_title">Лимит</string>
+    <string name="loop">Loop </string>
+    <string name="loop_aps_label">APS</string>
+    <string name="loop_constraintsprocessed_label">След използвани ограничения</string>
+    <string name="loop_setbypump_label">Зададено от помпа</string>
+    <string name="loopdisabled">Loop отказан от ограниченията</string>
+    <string name="lowsuspend">Low Suspend</string>
+    <string name="lowsuspend_low_title">Граница за ниска КЗ</string>
+    <string name="manualenacts">Manual enacts</string>
+    <string name="lowsuspend_lowprojected">Low projected:</string>
+    <string name="maxbasal_summary">Макс. ед./час на временен базал може да бъде до:</string>
+    <string name="maxbasal_title">Макс. базал</string>
+    <string name="maxbasaliob_summary">Макс. стойност на не-болус IOB зададена от OpenAPS</string>
+    <string name="maxbasaliob_title">Макс. базал IOB</string>
+    <string name="minimalduration">Минимална продължителност</string>
+    <string name="nav_backup">Архивиране</string>
+    <string name="nav_exit">Изход</string>
+    <string name="nav_preferences">Опции</string>
+    <string name="nav_refreshtreatments">Обнови събития от NS</string>
+    <string name="nav_resetdb">Нулирай базата данни</string>
+    <string name="nav_test_alarm">Тест на аларми</string>
+    <string name="noapsselected">Не е избран APS или  </string>
+    <string name="nochangerequested">Не се изискват промени</string>
+    <string name="noprofile">Не е зареден профил от NS</string>
+    <string name="ns_sync_use_absolute_summary">Изполване абсолютни стойности вместо % за качване в NS</string>
+    <string name="ns_sync_use_absolute_title">Използване на абсолютни стойности</string>
+    <string name="nsclient">NSClient</string>
+    <string name="nsprofileview_activeprofile_label">Активен профил:</string>
+    <string name="nsprofileview_basal_label">Базал:</string>
+    <string name="nsprofileview_dia_label">DIA (Време на действие на инсулина):</string>
+    <string name="nsprofileview_ic_label">IC (Инсулин/въглехидрати):</string>
+    <string name="nsprofileview_noprofile_text">НЕ Е ЗАДАДЕН ПРОФИЛ</string>
+    <string name="nsprofileview_target_label">Цел:</string>
+    <string name="nsprofileview_units_label">Единици:</string>
+    <string name="objectives">Цели</string>
+    <string name="objectives_button_start">Старт</string>
+    <string name="objectives_button_verify">Проверка</string>
+    <string name="objectives_gate_label_string">Gate:</string>
+    <string name="objectives_objective_label_string">Цели:</string>
+    <string name="ok">OK</string>
+    <string name="openapsma_currenttemp_label">Текущ базал</string>
+    <string name="openapsma_disabled">Модулът е забранен</string>
+    <string name="openapsma_glucosestatus_label">КЗ стастус</string>
+    <string name="openapsma_inputparameters_label">Входни параметри</string>
+    <string name="openapsma_iobdata_label">IOB данни</string>
+    <string name="openapsma_lastenact_label">Последно зададено</string>
+    <string name="openapsma_lastrun_label">Последно изпълнение</string>
+    <string name="openapsma_mealdata_label">Данни за хранене</string>
+    <string name="openapsma_minbg_label">Долна граница</string>
+    <string name="openapsma_noglucosedata">Няма данни за КЗ</string>
+    <string name="openapsma_noprofile">Няма данни за профил</string>
+    <string name="openapsma_nopump">Няма данни за помпа</string>
+    <string name="openapsma_profile_label">Профил</string>
+    <string name="openapsma_request_label">Искане</string>
+    <string name="openapsma_result_label">Резултат</string>
+    <string name="openapsma_run">Старт сега</string>
+    <string name="openloop_newsuggestion">Достъпно е ново предложение</string>
+    <string name="overview">Преглед</string>
+    <string name="overview_calculator_label">Калкулатор</string>
+    <string name="overview_newtempbasal_basal_label">Базална стойност</string>
+    <string name="overview_newtempbasal_percent_label">% (100% = current)</string>
+    <string name="overview_bolus_label">Болус</string>
+    <string name="profileviewer">NS профил</string>
+    <string name="pumpstatusavailableinns">Статус на помпа в NS</string>
+    <string name="rate">Стойност:</string>
+    <string name="reason">Основание:</string>
+    <string name="refreshfromnightscout">Искате ли да обновите treatments от Nightscout</string>
+    <string name="safety">Безопасност</string>
+    <string name="safety_useextended_summary">Използвай удължен болус за високите стойности (над 200%)</string>
+    <string name="safety_useextended_title">Използвай удължен болус</string>
+    <string name="setextendedbolusquestion">Задай нов комб. болусs:</string>
+    <string name="setbasalquestion">Приложи нов временен базал:</string>
+    <string name="simpleprofile">Jednoduchý profil</string>
+    <string name="tempbasals">Временен базал</string>
+    <string name="tempbasals_iob_label_string">IOB:</string>
+    <string name="tempbasals_iobtotal_label_string">Общо IOB:</string>
+    <string name="tempbasals_netinsulin_label_string">Инс:</string>
+    <string name="tempbasals_netratio_label_string">Коефициент:</string>
+    <string name="tempbasals_realduration_label_string">Продължителност:</string>
+    <string name="title_activity_preferences">Опции</string>
+    <string name="treatmentdeliveryerror">Грешка при болус</string>
+    <string name="treatments">Treatments</string>
+    <string name="treatments_activity_string">Активност:</string>
+    <string name="treatments_carbs_label_string">Въглехидрати:</string>
+    <string name="treatments_insulin_label_string">Инсулин:</string>
+    <string name="treatments_iob_label_string">IOB:</string>
+    <string name="treatments_iobactivitytotal_label_string">Общо активен IOB:</string>
+    <string name="treatments_iobtotal_label_string">Общо IOB:</string>
+    <string name="treatments_newtreatment_carbsamount_label">Количество въглехидрати</string>
+    <string name="treatments_newtreatment_insulinamount_label">Количество инсулин</string>
+    <string name="treatments_wizard_basaliob_label">Базален IOB</string>
+    <string name="treatments_wizard_bg_label">Кръвна захар</string>
+    <string name="treatments_wizard_bolusiob_label">Болус IOB</string>
+    <string name="treatments_wizard_carbs_label">Въглехидрати</string>
+    <string name="treatments_wizard_correction_label">Корекция</string>
+    <string name="treatments_wizard_total_label">ОБЩО</string>
+    <string name="treatments_wizard_unit_label">Ед.</string>
+    <string name="treatmentssafety_maxbolus_title">Макс. възможен болус</string>
+    <string name="treatmentssafety_maxcarbs_title">Макс. възможни въглехидрати</string>
+    <string name="treatmentssafety_title">Tratments safety</string>
+    <string name="unsupportedclientver">Неподържана версия на NSClient</string>
+    <string name="virtualpump">Виртуална помпа</string>
+    <string name="virtualpump_basebasalrate_label">Базова базална стойност:</string>
+    <string name="virtualpump_battery_label">Батерия:</string>
+    <string name="virtualpump_extendedbolus_label">Комбиниран болус:</string>
+    <string name="virtualpump_reservoir_label">Резервоар:</string>
+    <string name="virtualpump_resultok">OK</string>
+    <string name="virtualpump_sqlerror">Грешка в базата данни</string>
+    <string name="virtualpump_tempbasal_label">Временен базал:</string>
+    <string name="vitualpump_label">ВИРТУАЛНА ПОМПА</string>
+    <string name="xdrip">xDrip</string>
+    <string name="overview_extendedbolus_button">Комбиниран болус</string>
+    <string name="overview_tempbasal_button">Временен базал</string>
+    <string name="nsprofileview_isf_label">ISF (Инс.чувствителност):</string>
+    <string name="nsclientnotinstalled">NSClient не е инсталиран. Записът е загубен!</string>
+    <string name="lowsuspend_lowprojectedmessage">Прогнозирана ниска КЗ: Временен базал0%</string>
+    <string name="lowsuspend_lowmessage">Опасно ниска КЗ: Временен базал 0%</string>
+    <string name="lowsuspend_cancelmessage">LowSuspend: Cancel low temp</string>
+    <string name="lowsuspend_low">Low Suspend:</string>
     <string name="careportal_newnstreatment_eventtype">Тип събитие</string>
     <string name="careportal_newnstreatment_glucosetype">КЗ тип</string>
+    <string name="title_activity_main">AndroidAPS</string>
+    <string name="openapsma">OpenAPS MA</string>
     <string name="configbuilder_nightscoutversion_label">Nightscout версия:</string>
     <string name="configbuilder_nsclientversion_label">NSClient версия:</string>
+    <string name="send">ИЗПРАТИ</string>
+    <string name="missing">Липсва</string>
+    <string name="enabled">Enabled</string>
+    <string name="visible">Видимо</string>
+    <string name="up">Нагоре</string>
     <string name="exported">Настройките са експортирани</string>
+    <string name="setting_imported">Настройките са импортирани</string>
     <string name="import_from">Импортирай настройки от:</string>
     <string name="filenotfound">Файлът не съществува</string>
     <string name="export_to">Експортирай настройки до</string>
-    <string name="de_lang">German</string>
-    <string name="bg_lang">български</string>
-    <string name="nightscout">Nightscout</string>
+    <string name="nav_export">Експорт настройки</string>
+    <string name="nav_import">Импорт настройки</string>
+    <string name="de_lang">Немски</string>
+    <string name="openapsma_apslimits_label">APS лимит</string>
+    <string name="openapsma_high_summary">Максимална стойност, която е в границите</string>
+    <string name="openapsma_high_title">Горна граница</string>
+    <string name="openapsma_low_summary">Минимална стойност, която е в границите</string>
+    <string name="openapsma_low_title">Долна граница</string>
+    <string name="openapsma_maxbasal_summary">Макс. временен базал [Е/ч] може да бъде до</string>
+    <string name="openapsma_maxbasal_title">Максимален базал</string>
+    <string name="openapsma_maxbasaliob_title">Максимален базал IOB</string>
+    <string name="openapsma_targetrange_label">APS целева зона</string>
+    <string name="bg_lang">Български</string>
+    <string name="openapsma_maxiob_summary">Максимална стойност на не болус IOB, който openAPS може да зададе</string>
+    <string name="minago">min ago</string>
 </resources>
