--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="nav_preferences">Preferences</string>
     <string name="nav_refreshtreatments">Refresh treatments from NS</string>
     <string name="nav_backup">Backup</string>
-    <string name="nav_test_alarm">Test alarm</string>
+    <string name="nav_test_alert">Test alarm</string>
     <string name="nav_resetdb">Reset databases</string>
     <string name="nav_exit">Exit</string>
     <string name="danar_useextended_title">Use extended boluses for >200%</string>
@@ -227,5 +227,12 @@
     <string name="nobtadapter">No bluetooth adapter found</string>
     <string name="devicenotfound">Selected device not found</string>
     <string name="connectionerror">Pump connection error</string>
+    <string name="virtualpump_lastconnection_label">Last connection:</string>
+    <string name="danar_iob_label">Pump IOB:</string>
+    <string name="danar_dailyunits">Daily units:</string>
+    <string name="danar_lastbolus">Last bolus:</string>
+    <string name="hoursago">h ago</string>
+    <string name="danar_invalidinput">Invalid input data</string>
+    <string name="danar_valuenotsetproperly">Value not set properly</string>
 
 </resources>
