--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -56,11 +56,11 @@
     <string name="configbuilder_nightscoutversion_label">Nightscout Version:</string>
     <string name="configbuilder_nsclientversion_label">NSClient Version:</string>
     <string name="configbuilder_tempbasals">Temp Basals</string>
-    <string name="delta">Delta:</string>
-    <string name="duration">Dauer:</string>
+    <string name="delta">Delta</string>
+    <string name="duration">Dauer</string>
     <string name="en_lang">English</string>
     <string name="loop_aps_label">APS</string>
-    <string name="glucose">Glukose:</string>
+    <string name="glucose">Glukose</string>
     <string name="nav_backup">Backup</string>
     <string name="nav_preferences">Einstellungen</string>
     <string name="nsclient">NSClient</string>
@@ -81,8 +81,8 @@
     <string name="overview_bolus_label">Bolus</string>
     <string name="overview_calculator_label">Rechner</string>
     <string name="overview_tempbasal_button">TempBasal</string>
-    <string name="rate">Rate:</string>
-    <string name="reason">Grund:</string>
+    <string name="rate">Rate</string>
+    <string name="reason">Grund</string>
     <string name="safety">Sicherheit:</string>
     <string name="send">SEND</string>
     <string name="treatments_activity_string">Aktivität:</string>
@@ -149,7 +149,7 @@
     <string name="nochangerequested">No change requested</string>
     <string name="noapsselected">NO APS SELECTED OR PROVIDED RESULT</string>
     <string name="nav_test_alert">Test Alarm</string>
-    <string name="avgdelta">Avg. delta:</string>
+    <string name="avgdelta">Avg. delta</string>
     <string name="bolusconstraintapplied">Bolus constraint applied</string>
     <string name="careportal_announcement">Ankündigung</string>
     <string name="careportal_bgcheck">BZ Check</string>
@@ -170,14 +170,14 @@
     <string name="cs_lang">Czech</string>
     <string name="loop_setbypump_label">Gesetzt durch Pumpe</string>
     <string name="lowsuspend">Low Suspend</string>
-    <string name="lowsuspend_low">Low Suspend:</string>
+    <string name="lowsuspend_low">Low Suspend</string>
     <string name="lowsuspend_cancelmessage">LowSuspend: Cancel low temp</string>
     <string name="loopdisabled">LOOP DISABLED BY CONSTRAINTS</string>
     <string name="loop_constraintsprocessed_label">After processed constraints</string>
     <string name="loop">Loop</string>
     <string name="lowsuspend_low_title">Low BG threshold</string>
     <string name="lowsuspend_lowmessage">LOW: Temp basal 0%</string>
-    <string name="lowsuspend_lowprojected">Low projected:</string>
+    <string name="lowsuspend_lowprojected">Low projected</string>
     <string name="lowsuspend_lowprojectedmessage">LOW PROJECTED: Temp basal 0%</string>
     <string name="manualenacts">Manual enacts</string>
     <string name="carbsconstraintapplied">Carbs constraint applied</string>
